--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
+    "@mui/x-date-pickers": "^6.3.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -14,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.12",
     "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.10",
     "sweetalert2": "^11.7.5"
   },
   "scripts": {
